--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,5 +3,8 @@ fixtures:
     stdlib:
       repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
       ref: '4.1.0'
+    staging:
+      repo: 'git@github.com:nanliu/puppet-staging.git'
+      ref: '1.0.2'
   symlinks:
-    installation_manager: "#{source_dir}"
+    'ibm_installation_manager': "#{source_dir}"
