--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,35 @@
+---
 language: ruby
-script:
-  - "bundle exec puppet --version"
-  - "bundle exec rake spec SPEC_OPTS='--color --format documentation'"
-  - "bundle exec rake lint"
-  - "bundle exec rake validate"
-rvm:
- - 1.8.7
- - 1.9.3-p484
- - 2.0.0
-env:
- - PUPPET_GEM_VERSION=">= 3.7.0"
+sudo: false
+bundler_args: --without system_tests
+script: "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
 matrix:
   fast_finish: true
-  allow_failures:
-    - rvm: 2.0.0
   include:
-    - rvm: 1.8.7
-      env: PUPPET_GEM_VERSION="~> 2.7"
+  - rvm: 1.8.7
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random"
+  - rvm: 1.8.7
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random" STRICT_VARIABLES="yes" FUTURE_PARSER="yes"
+  - rvm: 1.9.3
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random"
+  - rvm: 1.9.3
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random" STRICT_VARIABLES="yes" FUTURE_PARSER="yes"
+  - rvm: 2.0.0
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random"
+  - rvm: 2.0.0
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random" STRICT_VARIABLES="yes" FUTURE_PARSER="yes"
+  - rvm: 2.1
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random"
+  - rvm: 2.1
+    env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random" STRICT_VARIABLES="yes" FUTURE_PARSER="yes"
+  - rvm: 1.9.3
+    env: PUPPET_GEM_VERSION="~> 4.0" ORDERING="random" STRICT_VARIABLES="yes"
+  - rvm: 2.0.0
+    env: PUPPET_GEM_VERSION="~> 4.0" ORDERING="random" STRICT_VARIABLES="yes"
+  - rvm: 2.1
+    env: PUPPET_GEM_VERSION="~> 4.0" ORDERING="random" STRICT_VARIABLES="yes"
+  allow_failures:
+    - env: PUPPET_GEM_VERSION="~> 4.0" ORDERING="random" STRICT_VARIABLES="yes"
+    - env: PUPPET_GEM_VERSION="~> 3.0" ORDERING="random" STRICT_VARIABLES="yes" FUTURE_PARSER="yes"
 notifications:
   email: false
