--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,8 +3,8 @@ fixtures:
     stdlib:
       repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
       ref: '4.6.0'
-    staging:
-      repo: 'git://github.com/nanliu/puppet-staging.git'
-      ref: '1.0.2'
+    archive:
+      repo: 'git://github.com/voxpupuli/puppet-archive.git'
+      ref: 'master'
   symlinks:
     'ibm_installation_manager': "#{source_dir}"
