--- a/.sync.yml
+++ b/.sync.yml
@@ -1,5 +1,14 @@
 # acceptance tests require access to internal resources
 ---
+.travis.yml:
+  docker_sets: []
+  includes:
+  - rvm: 2.3.1
+    bundler_args: --without system_tests
+    env: PUPPET_GEM_VERSION="~> 4.0"
+  - rvm: 2.1.7
+    bundler_args: --without system_tests
+    env: PUPPET_GEM_VERSION="~> 4.0"
 appveyor.yml:
   delete: true
 spec/spec_helper.rb:
