--- a/.sync.yml
+++ b/.sync.yml
@@ -9,6 +9,9 @@
   - rvm: 2.1.7
     bundler_args: --without system_tests
     env: PUPPET_GEM_VERSION="~> 4.0"
+  extras:
+    - rvm: 2.1.9
+      script: bundle exec rake rubocop
 appveyor.yml:
   delete: true
 spec/spec_helper.rb:
