--- a/.sync.yml
+++ b/.sync.yml
@@ -6,9 +6,6 @@
   secure: ""
   branches:
     - release
-  extras:
-    - env: CHECK=release_checks
-      rvm: 2.1.9
 
 Gemfile:
   required:
@@ -31,15 +28,14 @@ Gemfile:
         from_env: BEAKER_HOSTGENERATOR_VERSION
       - gem: beaker-rspec
         from_env: BEAKER_RSPEC_VERSION
-    ':development':
-      - gem: puppet-blacksmith
-        version: '~> 3.4'
 
-Rakefile:
-  requires:
-    - puppet_blacksmith/rake_tasks
-    - puppet-lint/tasks/puppet-lint
+appveyor.yml:
+  delete: true
 
 .rubocop.yml:
   default_configs:
     inherit_from: .rubocop_todo.yml
+
+Rakefile:
+  requires:
+    - puppet-lint/tasks/puppet-lint
