--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ bundler_args: --without system_tests
 rvm:
   - 2.4.1
 env:
-  global:
-    - BEAKER_PUPPET_COLLECTION=puppet5 PUPPET_GEM_VERSION="~> 5.0"
+  - PUPPET_GEM_VERSION="~> 5.0" CHECK=spec
 matrix:
   fast_finish: true
   include:
@@ -28,11 +27,11 @@ matrix:
     -
       env: CHECK=metadata_lint
     -
-      env: CHECK="check:symlinks check:git_ignore check:dot_underscore check:test_file"
+      env: CHECK=release_checks
     -
-      env: CHECK=parallel_spec
+      env: CHECK=spec
     -
-      env: PUPPET_GEM_VERSION="~> 4.0" CHECK=parallel_spec
+      env: PUPPET_GEM_VERSION="~> 4.0" CHECK=spec
       rvm: 2.1.9
 branches:
   only:
