--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,10 +1,10 @@
 fixtures:
   repositories:
     stdlib:
-      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+      repo: 'https://github.com/puppetlabs/puppetlabs-stdlib.git'
       ref: '4.6.0'
     archive:
-      repo: 'git://github.com/voxpupuli/puppet-archive.git'
+      repo: 'https://github.com/voxpupuli/puppet-archive.git'
       ref: 'master'
   symlinks:
     'ibm_installation_manager': "#{source_dir}"
