--- a/.sync.yml
+++ b/.sync.yml
@@ -1,47 +1,40 @@
 ---
-.gitignore:
+".gitignore":
   required:
-    - ---.project
-
-.gitlab-ci.yml:
+  - "---.project"
+".gitlab-ci.yml":
   unmanaged: true
-
-.rubocop.yml:
+".rubocop.yml":
   default_configs:
-    inherit_from: .rubocop_todo.yml
-
-.travis.yml:
+    inherit_from: ".rubocop_todo.yml"
+".travis.yml":
   docker_sets: []
   docker_defaults:
-    bundler_args: ""
-  secure: ""
+    bundler_args: ''
+  secure: ''
   branches:
-    - release
-
+  - release
 appveyor.yml:
   delete: true
-
 Gemfile:
   required:
-    ':system_tests':
-      - gem: 'puppet-module-posix-system-r#{minor_version}'
-        platforms: ruby
-      - gem: 'puppet-module-win-system-r#{minor_version}'
-        platforms:
-          - mswin
-          - mingw
-          - x64_mingw
+    ":system_tests":
+    - gem: puppet-module-posix-system-r#{minor_version}
+      platforms: ruby
+    - gem: puppet-module-win-system-r#{minor_version}
+      platforms:
+      - mswin
+      - mingw
+      - x64_mingw
   optional:
-    ':development':
-      - gem: 'github_changelog_generator'
-        git: 'https://github.com/skywinder/github-changelog-generator'
-        ref: '20ee04ba1234e9e83eb2ffb5056e23d641c7a018'
-        condition: "Gem::Version.new(RUBY_VERSION.dup) >= Gem::Version.new('2.2.2')"
-
+    ":development":
+    - gem: github_changelog_generator
+      git: https://github.com/skywinder/github-changelog-generator
+      ref: 20ee04ba1234e9e83eb2ffb5056e23d641c7a018
+      condition: Gem::Version.new(RUBY_VERSION.dup) >= Gem::Version.new('2.2.2')
 Rakefile:
   requires:
-    - puppet-lint/tasks/puppet-lint
-
+  - puppet-lint/tasks/puppet-lint
 spec/spec_helper.rb:
-  mock_with: ':rspec'
+  mock_with: ":rspec"
   coverage_report: true
