--- a/.sync.yml
+++ b/.sync.yml
@@ -22,10 +22,8 @@ appveyor.yml:
 Gemfile:
   required:
     ':development':
-      - gem: ed25519
-        version: '>= 1.2', '< 2.0'
-      - gem: bcrypt_pbkdf
-        version: '>= 1.0', '< 2.0'
+       - gem 'bcrypt_pbkdf', '>= 1.0', '< 2.0'
+       - gem 'ed25519', '>= 1.2', '< 2.0'
   optional:
     ":development":
     - gem: github_changelog_generator
