--- a/provision.yaml
+++ b/provision.yaml
@@ -2,7 +2,54 @@
 default:
 pr_checks:
   provisioner: abs
-  images: ['redhat-7-x86_64', 'centos-7-x86_64', 'oracle-7-x86_64', 'scientific-7-x86_64', 'debian-9-x86_64', 'ubuntu-1604-x86_64']
+  images:
+  - redhat-7-x86_64
+  - centos-7-x86_64
+  - oracle-7-x86_64
+  - scientific-7-x86_64
+  - debian-9-x86_64
+  - ubuntu-1604-x86_64
 release_checks:
   provisioner: abs
-  images: ['redhat-6-x86_64', 'redhat-7-x86_64', 'redhat-8-x86_64', 'centos-6-x86_64', 'centos-7-x86_64',  'centos-8-x86_64', 'oracle-6-x86_64', 'oracle-7-x86_64', 'scientific-6-x86_64', 'scientific-7-x86_64', 'debian-8-x86_64', 'debian-9-x86_64',  'debian-10-x86_64', 'ubuntu-1404-x86_64', 'ubuntu-1604-x86_64', 'ubuntu-1804-x86_64']
+  images:
+  - redhat-6-x86_64
+  - redhat-7-x86_64
+  - redhat-8-x86_64
+  - centos-6-x86_64
+  - centos-7-x86_64
+  - centos-8-x86_64
+  - oracle-6-x86_64
+  - oracle-7-x86_64
+  - scientific-6-x86_64
+  - scientific-7-x86_64
+  - debian-8-x86_64
+  - debian-9-x86_64
+  - debian-10-x86_64
+  - ubuntu-1404-x86_64
+  - ubuntu-1604-x86_64
+  - ubuntu-1804-x86_64
+release_checks_7:
+  provisioner: abs
+  images:
+  - redhat-7-x86_64
+  - redhat-8-x86_64
+  - centos-7-x86_64
+  - centos-8-x86_64
+  - oracle-7-x86_64
+  - scientific-7-x86_64
+  - ubuntu-18.04-x86_64
+travis_puppet7_centos_7:
+  provisioner: docker
+  images: litmusimage/centos:7
+travis_puppet7_centos_8:
+  provisioner: docker
+  images: litmusimage/centos:8
+travis_puppet7_oraclelinux_7:
+  provisioner: docker
+  images: litmusimage/oraclelinux:7
+travis_puppet7_scientificlinux_7:
+  provisioner: docker
+  images: litmusimage/scientificlinux:7
+travis_puppet7_ubuntu_18_04:
+  provisioner: docker
+  images: litmusimage/ubuntu:18.04
