--- a/.sync.yml
+++ b/.sync.yml
@@ -27,3 +27,5 @@ spec/spec_helper.rb:
   unmanaged: false
 .gitpod.yml:
   unmanaged: false
+.github/workflows/auto_release.yml:
+  unmanaged: false
