--- a/.sync.yml
+++ b/.sync.yml
@@ -28,3 +28,6 @@ spec/spec_helper.rb:
   unmanaged: false
 .travis.yml:
   delete: true
+Rakefile:
+  extra_disabled_lint_checks:
+    - parameter_types
